[package]
name = "vk-playground"
version = "0.1.0"
authors = ["Matt Coffin <mcoffin13@gmail.com>"]

[dependencies]
ash = "^0.18.4"
libc = "^0.2.30"
log = "^0.3.8"
env_logger = "^0.4.3"

[dependencies.glfw]
version = "^0.17.0"
default-features = false
features = ["vulkan"]

[features]
default = ["safe_create"]
safe_create = []
